src/components/NavBar/NavBar.module.css
.nav {
  position: sticky;
  top: 0;
  left: 0;
  z-index: 300;
  display: flex;
  align-items: center;
  gap: 20px;
  padding: 20px;
  background: var(--color-bg);
  color: var(--color-primary);
}

.siteLogo {
  width: 3rem;
  height: 3rem;
  fill: var(--color-primary);
}

.badge {
  margin-left: 5px;
  font-weight: bold;
  color: red;
}

button {
  background: none;
  padding: 0;
  border: none;
  color: var(--color-primary);
}

.navBtn {
  color: var(--color-primary);
  font-size: 1.5rem;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
}

.navBtn:hover {
  color: var(--color-primary-hover);
  /* filter: drop-shadow(0px 0px 5px var(--color-primary)); */
}

.cartBtn {
  position: relative;
}

.badge {
  background-color: antiquewhite;
  width: 1rem;
  height: 1rem;
  border-radius: 50%;
  text-align: center;
  font-size: 0.8rem;
  position: absolute;
  top: -2px;
  left: 20%;
  color: var(--color-bg);
}

